# fakeradar

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_PLAN.md  README.md  ROADMAP.md  SECURITY.md  paper.tex  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_generator_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
configs/: accurate.yaml  fast.yaml  train_fast.yaml
demo/: app.py
docs/: architecture.md  benchmarks.md
docs/superpowers/specs/: 2026-07-07-engineering-complete-v0.1-design.md
paper/: INTEGRITY_CHECKLIST.md  paper.tex  references.bib
scripts/: prepare_genimage.py
src/fakeradar/: __init__.py  cli.py  config.py  constants.py  detector.py  fusion.py  models.py  preprocessing.py  server.py
src/fakeradar/branches/: __init__.py  base.py  frequency.py  gradient.py  semantic.py
src/fakeradar/evaluation/: __init__.py  benchmark.py  calibrate.py  metrics.py
src/fakeradar/training/: __init__.py  augment.py  datasets.py  train.py
tests/: test_augment.py  test_branches.py  test_cli.py  test_config.py  test_datasets.py  test_detector.py  test_export_onnx.py  test_fusion.py  test_metrics.py  test_preprocessing.py  test_server.py  test_train_smoke.py
